Created the Disney+ Studios Section (html + css styling)
Note:
- Currently the video that appears when hovering over the studio element is working sometimes, so that has to be fixed!

--- a/index.html
+++ b/index.html
@@ -6,9 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Disney+ Studios Section (Clone)</title>
+    <title>Disney+ Studios Section</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="studios">
+            <a href="https://www.disney.nl/" target="_blank" class="studio">
+                <img src="img/Disney.png" alt="Disney">
+                <video src="videos/Disney.mp4" type="video/mp4" loop autoplay playsinline></video>
+            </a>
+            <a href="https://www.pixar.com/" target="_blank" class="studio">
+                <img src="img/Pixar.png" alt="Pixar">
+                <video src="videos/Pixar.mp4" type="video/mp4" loop autoplay playsinline></video>
+            </a>
+            <a href="https://www.marvel.com/" target="_blank" class="studio">
+                <img src="img/Marvel.png" alt="Marvel">
+                <video src="videos/Marvel.mp4" type="video/mp4" loop autoplay playsinline></video>
+            </a>
+            <a href="https://www.starwars.com/" target="_blank" class="studio">
+                <img src="img/StarWars.png" alt="Star Wars">
+                <video src="videos/StarWars.mp4" type="video/mp4" loop autoplay playsinline></video>
+            </a>
+            <a href="https://www.nationalgeographic.nl/" target="_blank" class="studio">
+                <img src="img/NationalGeographic.png" alt="National Geographic">
+                <video src="videos/NationalGeographic.mp4" type="video/mp4" loop autoplay playsinline></video>
+            </a>
+            <a href="https://www.starplus.com/" target="_blank" class="studio">
+                <img src="img/Star.png" alt="Star">
+                <video src="videos/Star.mp4" type="video/mp4" loop autoplay playsinline></video>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
