Fixed hover state of studio div
The video that appears when hovering of a studio div, was not working properly. So I fixed that in this commit by adding the `muted` property to the video tags / elements in index.html

Source: https://stackoverflow.com/questions/69427603/autoplay-on-video-is-not-working-after-refreshing-page

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
         <div class="studios">
             <a href="https://www.disney.nl/" target="_blank" class="studio">
                 <img src="img/Disney.png" alt="Disney">
-                <video src="videos/Disney.mp4" type="video/mp4" loop autoplay playsinline></video>
+                <video src="videos/Disney.mp4" type="video/mp4" loop autoplay playsinline muted></video>
             </a>
             <a href="https://www.pixar.com/" target="_blank" class="studio">
                 <img src="img/Pixar.png" alt="Pixar">
-                <video src="videos/Pixar.mp4" type="video/mp4" loop autoplay playsinline></video>
+                <video src="videos/Pixar.mp4" type="video/mp4" loop autoplay playsinline muted></video>
             </a>
             <a href="https://www.marvel.com/" target="_blank" class="studio">
                 <img src="img/Marvel.png" alt="Marvel">
-                <video src="videos/Marvel.mp4" type="video/mp4" loop autoplay playsinline></video>
+                <video src="videos/Marvel.mp4" type="video/mp4" loop autoplay playsinline muted></video>
             </a>
             <a href="https://www.starwars.com/" target="_blank" class="studio">
                 <img src="img/StarWars.png" alt="Star Wars">
-                <video src="videos/StarWars.mp4" type="video/mp4" loop autoplay playsinline></video>
+                <video src="videos/StarWars.mp4" type="video/mp4" loop autoplay playsinline muted></video>
             </a>
             <a href="https://www.nationalgeographic.nl/" target="_blank" class="studio">
                 <img src="img/NationalGeographic.png" alt="National Geographic">
-                <video src="videos/NationalGeographic.mp4" type="video/mp4" loop autoplay playsinline></video>
+                <video src="videos/NationalGeographic.mp4" type="video/mp4" loop autoplay playsinline muted></video>
             </a>
             <a href="https://www.starplus.com/" target="_blank" class="studio">
                 <img src="img/Star.png" alt="Star">
-                <video src="videos/Star.mp4" type="video/mp4" loop autoplay playsinline></video>
+                <video src="videos/Star.mp4" type="video/mp4" loop autoplay playsinline muted></video>
             </a>
         </div>
     </div>
